protected/modules/admin/assets/css/admin.css
/* ... */
.add_button {
  background:url('../images/icon_add.png') no-repeat;
  width:16px;
  height:16px;
  display:inline-block;
  cursor:pointer;
  margin:0 5px;
}

.close_button {
  background:url('../images/icon_delete.png') no-repeat;
  width:16px;
  height:16px;
  cursor:pointer;
  right:5px;
  top:5px;
  z-index:9;
  position:absolute;
}


/*******************
*
* ToDo
*
******************/
.todo_priority_4 {
    background-color:#063032;
}
.todo_priority_3 {
  background-color:#00690a;
}
.todo_priority_2 {
    background-color:#be8b00;
}
.todo_priority_1 {
}
.todo_finished_task {
    color:#60a149;
}
.todo_return {
    color:#6a0079;
}
.todo_task {
    color:#a14949;
}
.todo_in_process {
    color:#d2cd36;
}
/*******************
*
* Меню сортировки
*
******************/
.history {
    display:inline-block;
    padding:5px;
    margin:5px;
    border-radius: 5px;
  -moz-border-radius: 5px;
}
.red {
   background:#320606;
}

/*******************
*
* Циферка в кружечке
*
******************/
.quantity {
  width:45px;
  height:45px;
  padding:0 10px 10px 0;
  position:relative;
}

.quantity span {
 width:18px;
 height:18px;
 display:block;
 border-radius:9px;
 -moz-border-radius:9px;
 -webkit-border-radius:9px;
 -khtml-border-radius:9px;
 color:#f0f0f0;
 font-size:13px;
 font-weight:bold;
 line-height:18px;
 text-align:center;
 font-weight:bold;
 background:#b8da5c;
 background: rgba(50, 0, 0, 0.50);
 cursor:pointer;
 position:absolute;
 right:0;
 bottom:0;
 margin-left:9px;
 margin-top:9px;
 border:1px rgba(80, 80, 80, 0.7) solid;
}

/**
* Цвета статусов
**/
.status_1,
.level_error { /* Не выполненно */
    background:#a14949;
	color: #ff7474;
}

.status_1 label {
	color: #ff7474;
}

.status_2,
.level_info {/* В процессе */
    background:#d2cd36;
}

.status_2 label {
	color: #605e23;
}

.status_3,
.level_profile { /* Выполненно */
    background:#60a149;
}

.status_3 label {
	color: #98ff74;
}

.status_4,
.level_warning { /* Отмена */
    background:#6a0079;
}

.status_4 label {
	color: #df00ff;
}

#ui-datepicker-div select {
  width: 100%;
  min-width: 0;
}
.ui-datepicker-calendar th span {
  color: #fff;
}

/**
 * Переключатили модулей
 */
.switchOn,
.switchOff {
  position: relative;
  top: -2px;

  display: inline-block;
  width: 15px;
  height: 15px;

  cursor: pointer;
  vertical-align: middle;
}

.switchOn:before,
.switchOff:before {
  content: '';
  display: inline-block;

  position: absolute;
  top: 50%;
  left: 50%;

  width: 5px;
  height: 5px;
  margin-top: -2.5px;
  margin-left: -2.5px;


  border-radius: 2px;
  background: green;
  box-shadow: 0 0 5px 2px green;
}

.switchOff:before {
  background: red;
  box-shadow: 0 0 5px 2px red;
}

/* Redactor JS */
body .redactor_editor
{
  color:#000;
}


/* page actions */
#pageActions {
  font-size: 13px; /* Временно, пока это еще только текст */
  display:inline-block;
  margin-left: 15px;
}


/**
 * jQuery UI
 */
.ui-dialog {
  z-index: 999;
}

.ui-dialog .ui-button-icon-only .ui-icon {
  /* Исправление иконки крестика в диалоге, которая поплыла, судя по всему из-за новой версии jQuery UI */
  margin: -8px 0px 0px -9px;
}

.ui-dialog .ui-button-icon-only .ui-button-text {
  /* Исправление иконки крестика в диалоге, которая поплыла, судя по всему из-за новой версии jQuery UI */
  display: none;
}

